--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -45,10 +45,41 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Npgsql, Version=4.1.2.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Npgsql.4.1.2\lib\net461\Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Encodings.Web, Version=4.0.4.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Text.Encodings.Web.4.6.0\lib\netstandard2.0\System.Text.Encodings.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Text.Json.4.6.0\lib\net461\System.Text.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.3\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -121,10 +152,21 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\ClubsDAL.cs" />
+    <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Shows.cs" />
+    <Compile Include="Models\Cast.cs" />
+    <Compile Include="Models\Club.cs" />
+    <Compile Include="Models\Date.cs" />
+    <Compile Include="Models\Exec.cs" />
+    <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\Pit.cs" />
+    <Compile Include="Models\Semester.cs" />
+    <Compile Include="Models\Show.cs" />
+    <Compile Include="Models\Staff.cs" />
+    <Compile Include="Models\UmbrellaOrg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -137,8 +179,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\global.js" />
-    <Content Include="Styles\global.css" />
-    <Content Include="Styles\global.min.css" />
+    <Content Include="Styles\new-global.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -157,9 +198,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Plugins\" />
-    <Folder Include="Styles\bootstrap\mixins\" />
-    <Folder Include="Styles\bootstrap\utilities\" />
-    <Folder Include="Styles\bootstrap\vendor\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -175,53 +214,6 @@
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
     <None Include="packages.config" />
-    <Content Include="Styles\base\_mixins.scss" />
-    <Content Include="Styles\base\_placeholders.scss" />
-    <Content Include="Styles\base\_variables.scss" />
-    <Content Include="Styles\bootstrap\bootstrap-grid.scss" />
-    <Content Include="Styles\bootstrap\bootstrap-reboot.scss" />
-    <Content Include="Styles\bootstrap\bootstrap.scss" />
-    <Content Include="Styles\bootstrap\_alert.scss" />
-    <Content Include="Styles\bootstrap\_badge.scss" />
-    <Content Include="Styles\bootstrap\_breadcrumb.scss" />
-    <Content Include="Styles\bootstrap\_button-group.scss" />
-    <Content Include="Styles\bootstrap\_buttons.scss" />
-    <Content Include="Styles\bootstrap\_card.scss" />
-    <Content Include="Styles\bootstrap\_carousel.scss" />
-    <Content Include="Styles\bootstrap\_close.scss" />
-    <Content Include="Styles\bootstrap\_code.scss" />
-    <Content Include="Styles\bootstrap\_custom-forms.scss" />
-    <Content Include="Styles\bootstrap\_dropdown.scss" />
-    <Content Include="Styles\bootstrap\_forms.scss" />
-    <Content Include="Styles\bootstrap\_functions.scss" />
-    <Content Include="Styles\bootstrap\_grid.scss" />
-    <Content Include="Styles\bootstrap\_images.scss" />
-    <Content Include="Styles\bootstrap\_input-group.scss" />
-    <Content Include="Styles\bootstrap\_jumbotron.scss" />
-    <Content Include="Styles\bootstrap\_list-group.scss" />
-    <Content Include="Styles\bootstrap\_media.scss" />
-    <Content Include="Styles\bootstrap\_mixins.scss" />
-    <Content Include="Styles\bootstrap\_modal.scss" />
-    <Content Include="Styles\bootstrap\_nav.scss" />
-    <Content Include="Styles\bootstrap\_navbar.scss" />
-    <Content Include="Styles\bootstrap\_pagination.scss" />
-    <Content Include="Styles\bootstrap\_popover.scss" />
-    <Content Include="Styles\bootstrap\_print.scss" />
-    <Content Include="Styles\bootstrap\_progress.scss" />
-    <Content Include="Styles\bootstrap\_reboot.scss" />
-    <Content Include="Styles\bootstrap\_root.scss" />
-    <Content Include="Styles\bootstrap\_spinners.scss" />
-    <Content Include="Styles\bootstrap\_tables.scss" />
-    <Content Include="Styles\bootstrap\_toasts.scss" />
-    <Content Include="Styles\bootstrap\_tooltip.scss" />
-    <Content Include="Styles\bootstrap\_transitions.scss" />
-    <Content Include="Styles\bootstrap\_type.scss" />
-    <Content Include="Styles\bootstrap\_utilities.scss" />
-    <Content Include="Styles\bootstrap\_variables.scss" />
-    <Content Include="Styles\framework\_breakpoints.scss" />
-    <Content Include="Styles\global.scss" />
-    <Content Include="Styles\_normalize.scss" />
-    <Content Include="Styles\modules\home\home.scss" />
     <Content Include="Views\Home\CRUDPartials\_Shows.cshtml" />
     <Content Include="Views\Home\CRUDPartials\_Members.cshtml" />
     <Content Include="Views\Home\CRUDPartials\_Exec.cshtml" />
