--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -227,8 +227,13 @@
     <Compile Include="Models\Staff.cs" />
     <Compile Include="Models\UmbrellaOrg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CRUD_VMs\CastsVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\CRUDVM.cs" />
+    <Compile Include="ViewModels\CRUD_VMs\ExecVM.cs" />
+    <Compile Include="ViewModels\CRUD_VMs\MembersVM.cs" />
+    <Compile Include="ViewModels\CRUD_VMs\PitsVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\ShowsVM.cs" />
+    <Compile Include="ViewModels\CRUD_VMs\StaffVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
