--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -244,7 +244,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\Casts.js" />
     <Content Include="Scripts\global.js" />
+    <Content Include="Scripts\shows.js" />
     <Content Include="Styles\new-global.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
