--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -209,10 +209,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\CastsDAL.cs" />
     <Compile Include="DAL\ClubsDAL.cs" />
     <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="DAL\DatesDAL.cs" />
+    <Compile Include="DAL\ExecDAL.cs" />
+    <Compile Include="DAL\MembersDAL.cs" />
+    <Compile Include="DAL\PitsDAL.cs" />
     <Compile Include="DAL\ShowsDAL.cs" />
+    <Compile Include="DAL\StaffDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
