--- a/TheaterDatabase/packages.config
+++ b/TheaterDatabase/packages.config
@@ -38,6 +38,7 @@
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.Core" version="3.5.21022.801" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
