--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -206,6 +206,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\AnalyticsDAL.cs" />
     <Compile Include="DAL\CastsDAL.cs" />
     <Compile Include="DAL\ClubsDAL.cs" />
     <Compile Include="DAL\DatabaseConnection.cs" />
@@ -229,6 +230,9 @@
     <Compile Include="Models\Staff.cs" />
     <Compile Include="Models\UmbrellaOrg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Analytics_VMs\AnalyticsVM.cs" />
+    <Compile Include="ViewModels\Analytics_VMs\BudgetAverageVM.cs" />
+    <Compile Include="ViewModels\Analytics_VMs\MusicalsCountVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\CastsVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\CRUDVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\ExecVM.cs" />
@@ -248,6 +252,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\analytics.js" />
     <Content Include="Scripts\casts.js" />
     <Content Include="Scripts\exec.js" />
     <Content Include="Scripts\global.js" />
@@ -295,6 +300,8 @@
     <Content Include="Views\Home\CRUDPartials\_Casts.cshtml" />
     <Content Include="Views\Home\CRUDPartials\_Staff.cshtml" />
     <Content Include="Views\Home\CRUDPartials\_Pits.cshtml" />
+    <Content Include="Views\Home\AnalyticsPartials\_BudgetAverages.cshtml" />
+    <Content Include="Views\Home\AnalyticsPartials\_MusicalCounts.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
