--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -232,8 +232,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Analytics_VMs\AnalyticsVM.cs" />
     <Compile Include="ViewModels\Analytics_VMs\BudgetAverageVM.cs" />
+    <Compile Include="ViewModels\Analytics_VMs\MembersByVoicePartVM.cs" />
     <Compile Include="ViewModels\Analytics_VMs\MusicalsCountVM.cs" />
     <Compile Include="ViewModels\Analytics_VMs\RepeatStaffPositionsVM.cs" />
+    <Compile Include="ViewModels\Analytics_VMs\ShowsByInstrumentVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\CastsVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\CRUDVM.cs" />
     <Compile Include="ViewModels\CRUD_VMs\ExecVM.cs" />
@@ -304,6 +306,8 @@
     <Content Include="Views\Home\AnalyticsPartials\_BudgetAverages.cshtml" />
     <Content Include="Views\Home\AnalyticsPartials\_MusicalCounts.cshtml" />
     <Content Include="Views\Home\AnalyticsPartials\_RepeatStaffs.cshtml" />
+    <Content Include="Views\Home\AnalyticsPartials\_MembersByVoicePart.cshtml" />
+    <Content Include="Views\Home\AnalyticsPartials\_ShowsByInstrument.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
