fix sql scripts

--- a/TheaterDatabase/TheaterDatabase.csproj
+++ b/TheaterDatabase/TheaterDatabase.csproj
@@ -251,8 +251,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\creates.sql" />
-    <Content Include="Content\inserts.sql" />
+    <Content Include="Content\sql\01-createDatabase.sql" />
+    <Content Include="Content\sql\02-createTablesAndForeignKeys.sql" />
+    <Content Include="Content\sql\03-insertClubs.sql" />
+    <Content Include="Content\sql\04-insertDates.sql" />
+    <Content Include="Content\sql\05-insertShows.sql" />
+    <Content Include="Content\sql\06-insertMembers.sql" />
+    <Content Include="Content\sql\07-insertStaffs.sql" />
+    <Content Include="Content\sql\08-insertPits.sql" />
+    <Content Include="Content\sql\09-insertExecs.sql" />
+    <Content Include="Content\sql\10-insertCasts.sql" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
